# sber_autopodpiska

./: .dockerignore  .env.example  .gitignore  Dockerfile  Final work.ipynb  LICENSE  Makefile  README.md  features.py  main.py  pyproject.toml  requirements.txt  utils.txt
.gradio/flagged/: dataset1.csv
configs/: config.yaml  paths.yaml
configs/data/: default.yaml
configs/deploy/: docker-compose.yml
configs/logging/: default.yaml
configs/model/: catboost.yaml  lightgbm.yaml  xgboost.yaml
configs/paths/: paths.yaml
configs/security/: security.yaml
configs/training/: default.yaml
dags/: dag_batch_inference.py  dag_retrain_pipeline.py  daily_ml_pipeline.py
data/raw/: .gitignore  ga_hits.csv.dvc  ga_sessions.csv.dvc
docker/airflow/: Dockerfile
docker/api/: Dockerfile
docker/mlflow/: Dockerfile
docker/train/: Dockerfile
notebooks/: 1.0-eda.ipynb  2.0-feature-engineering.ipynb  3.0-baseline-model.ipynb  4.0-error-analysis.ipynb  5.0-explainability.ipynb  8.0-demo.ipynb  EDA.ipynb
notebooks/.ipynb_checkpoints/: EDA-checkpoint.ipynb
reports/p_v1.0.0__f_v1.1.0__m_v0.1.0/: eda_report.html  target_eda_report.html  worst_errors_profile_v1.0.0.txt
sql/eda/: sampled_hits.sql
sql/features/: default_aggregation.sql  dirty_baseline_aggregation.sql  engineered_aggregation.sql
sql/init_db/: create_tables.sql
src/: config.py  database.py  dataload.py  eda.py  main.py  visual.py
src/api/: dependencies.py  main.py  schemas.py
src/core/: artifacts.py  config_schema.py  data.py  features.py  metrics.py  pipeline.py  shap_explainer.py  splitting.py  tuner.py  utils.py  visualisation.py
src/core/models/: __init__.py  base.py  catboost.py  lightgbm.py  pytorch.py  xgboost.py
src/core/scripts/: upload_raw_data.py
src/eda/: shap_explainer.py  utils_eda.py  visualisation.py
src/scripts/: upload_raw_data.py
tests/: conftest.py
tests/integration/: test_artifacts.py  test_latency.py  test_model_behavior.py  test_pipeline.py  test_reproducibility.py
tests/unit/: test_data.py  test_features.py
