[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

# ============================================================
# МЕТАДАННЫЕ ПРОЕКТА
# ============================================================
[project]
name = "sber_autopodpiska_classifier_target_action"
version = "0.1.0"
description = "Промышленный ML-пайплайн"
readme = "README.md"
requires-python = ">=3.10, <3.11"
authors = [
    { name = "Новиков Максим", email = "mallienotxc@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# ============================================================
# 1. CORE & API ЗАВИСИМОСТИ (ПРОДАКШЕН)
# Устанавливается по умолчанию. Строго то, что нужно для работы скриптов и сервера.
# ============================================================
dependencies = [
    # Оркестрация и конфиги
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "mlflow>=2.10.0",
    "apache-airflow>=2.9.0", # Заменили airflow на apache-airflow
    # ML & Данные
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "catboost>=1.2.0",
    "optuna>=3.3.0",
    "joblib>=1.3.0",
    "duckdb>=1.0.0",
    "torch>=2.1.2", # Внимание: версии 2.12.1 не существует, скорее всего опечатка, исправил на актуальную ветку 2
    # API и Мониторинг (добавил, так как у нас есть FastAPI)
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.6.0",
    "prometheus-client>=0.20.0",
    "psycopg2-binary>=2.9.12",
    "dvc>=3.67.1",
    "optuna-integration>=4.9.0",
]

# ============================================================
# 2. ОПЦИОНАЛЬНЫЕ ЗАВИСИМОСТИ (RESEARCH & EDA)
# ============================================================
[project.optional-dependencies]
eda = [
    "matplotlib>=3.8.0",
    "seaborn>=0.13.2",
    "sweetviz>=2.3.3",
    "shap>=0.44.0",
    "gradio>=4.20.0",
    "ipywidgets>=8.1.0",
]

# ============================================================
# 3. ИНСТРУМЕНТЫ РАЗРАБОТКИ И ТЕСТИРОВАНИЯ (DEV)
# Не попадают в итоговый Docker/Production образ
# ============================================================
[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "ipykernel>=6.29.0",
]

# ============================================================
# НАСТРОЙКИ ИНСТРУМЕНТОВ
# ============================================================

[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["-v", "--tb=short", "--strict-markers"]
pythonpath = [".", "src"]
testpaths = ["tests"]
markers = [
    "unit: Быстрые изолированные тесты компонентов",
    "integration: Тяжелые интеграционные тесты пайплайна",
    "slow: Тесты производительности, запускаются отдельно (--runslow)"
]
filterwarnings = [
    "ignore::FutureWarning:sklearn.*",
    "ignore::DeprecationWarning:mlflow.*"
]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | catboost_info
  | mlruns
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
