[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

# ============================================================
# МЕТАДАННЫЕ ПРОЕКТА
# ============================================================
[project]
name = "sber_autopodpiska_classifier_target_action"
version = "0.1.0"
description = "Промышленный ML-пайплайн"
readme = "README.md"
requires-python = ">=3.10, <3.11"
authors = [
    { name = "Новиков Максим", email = "mallienotxc@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# ============================================================
# 1. CORE ЗАВИСИМОСТИ (общий фундамент для ВСЕХ образов: api, train)
#
# Это минимальный набор, без которого не импортируется src/core/*.
# Сюда НЕ входит ни fastapi-стек, ни mlflow-стек — те разнесены по
# своим extras ниже (api / train), чтобы train-образ не тащил fastapi,
# а api-образ не тащил mlflow/optuna.
#
# Проверено по факту использования (top-level импорты, не за
# try/except ImportError):
#   - hydra-core/omegaconf/python-dotenv -> main.py, utils.py, data.py,
#     features.py, tuner.py, pipeline.py
#   - pandas/numpy/scikit-learn         -> повсеместно в src/core
#   - catboost                          -> models/catboost.py (единственная
#                                           реально используемая ML-модель
#                                           в этом проекте; lightgbm/xgboost/
#                                           pytorch wrapper'ы существуют, но
#                                           обёрнуты в try/except ImportError
#                                           в models/__init__.py — не нужны)
#   - joblib                            -> pipeline.py (save/load артефактов)
#   - sqlalchemy + psycopg2-binary      -> data.py (create_engine, top-level
#                                           импорт). Источник train-данных —
#                                           PostgreSQL. ВАЖНО: data.py
#                                           импортирует sqlalchemy безусловно,
#                                           поэтому формально это нужно даже
#                                           лёгкому api-образу, раз main.py
#                                           orchestrator транзитивно тянет
#                                           data.py. Технический долг: вынести
#                                           импорт sqlalchemy в data.py под
#                                           ленивый блок (внутри функции,
#                                           читающей из БД) и тогда убрать
#                                           sqlalchemy/psycopg2 отсюда в core.
# ============================================================
dependencies = [
    # Конфиги
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "python-dotenv",

    # Runtime ML (нужно и для train, и для inference/serving)
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "catboost>=1.2.0",
    "joblib>=1.3.0",
    #"torch>=2.1.2",
    # "lightgbm>=4.3.0",
    # "xgboost>=2.0.3",

    # БД (источник train-данных; см. примечание о техдолге выше)
    "duckdb>=1.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.12",
]

# ============================================================
# 2. ОПЦИОНАЛЬНЫЕ ЗАВИСИМОСТИ
#
# Три независимых extra поверх core. Каждый образ ставит ровно то,
# что ему нужно: api-образ -> core + api, train-образ -> core + train.
# Они не пересекаются и не зависят друг от друга.
# ============================================================
[project.optional-dependencies]
# Всё, что нужно serving-слою (FastAPI-сервис, src/api/*).
# Не попадает в train-образ — обучению не нужен веб-фреймворк.
#   - fastapi/uvicorn/pydantic -> src/api/main.py, schemas.py
#   - prometheus-client        -> src/api/main.py (метрики инференса)
api = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.6.0",
    "prometheus-client>=0.20.0",
]

# Всё, что нужно ТОЛЬКО для train/tune/evaluate (mode != inference).
# Не попадает в api-образ.
#   - mlflow                  -> artifacts.py (ArtifactManager)
#   - optuna/optuna-integration -> tuner.py (OptunaTuner),
#                                  artifacts.py (MLflowCallback)
#   - matplotlib/seaborn      -> ВАЖНО: это НЕ eda-инструмент в этом проекте.
#                                 src/eda/visualisation.py импортируется
#                                 напрямую из pipeline.py и реально вызывается
#                                 внутри MLPipeline.train() (error_analyse,
#                                 search_trends, feature_importance — графики,
#                                 логируемые в MLflow). Без них train()
#                                 падает при save_artifacts=True.
#   - dvc                     -> версионирование датасетов
#   - duckdb                  -> обработка больших объёмов данных (co-occurrence
#                                 пайплайны, как в ALS+LightGBM проектах)
train = [
    "mlflow>=2.10.0",
    "optuna>=3.3.0",
    "optuna-integration>=4.9.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.2",
    "dvc>=3.67.1",
]

# Ручной EDA в ноутбуках (sweetviz-отчёты, SHAP-анализ, gradio-демки).
# Не вызывается автоматически ни одним mode= в main.py — чисто research.
eda = [
    "sweetviz>=2.3.3",
    "shap>=0.44.0",
    "gradio>=4.20.0",
    "ipywidgets>=8.1.0",
]

# ============================================================
# 3. ИНСТРУМЕНТЫ РАЗРАБОТКИ И ТЕСТИРОВАНИЯ (DEV)
# ============================================================
[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "ipykernel>=6.29.0",
]

# ============================================================
# НАСТРОЙКИ ИНСТРУМЕНТОВ
# ============================================================

[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["-v", "--tb=short", "--strict-markers"]
pythonpath = [".", "src"]
testpaths = ["tests"]
markers = [
    "unit: Быстрые изолированные тесты компонентов",
    "integration: Тяжелые интеграционные тесты пайплайна",
    "slow: Тесты производительности, запускаются отдельно (--runslow)"
]
filterwarnings = [
    "ignore::FutureWarning:sklearn.*",
    "ignore::DeprecationWarning:mlflow.*"
]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | catboost_info
  | mlruns
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true